<resources>
    <string name="app_name">ListOfTasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_tasks">Все задачи</string>
    <string name="completed_tasks">Выполненные задачи</string>
    <string name="in_progress_tasks">Выполняемые задачи</string>
    <string name="all_tasks_title">Все задачи</string>
    <string name="date_of">Дата :</string>
    <string name="deadline">Срок :</string>
    <string name="task_title">Заголовок задачи</string>
    <string name="task_description">Описание задания</string>
    <string name="add">Добавить</string>
    <string name="set_date">Установить дату</string>
    <string name="cancel">Отмена</string>
    <string name="date_time">ДАТА ВРЕМЯ</string>
    <string name="all">Все</string>
    <string name="completed">Завершенный</string>
    <string name="in_progress">В ходе выполнения</string>
    <string name="edit">Редактировать</string>
    <string name="done">Выполнено</string>
    <string name="delete">Удалить</string>
    <string name="ok_edit">Ок, изменить</string>
    <string name="change_deadline_date">Изменить дату крайнего срока:</string>
    <string name="deadline_date">Срок сдачи:</string>
    <string name="delete_all">Удалить все</string>
    <string name="change_language">Изменить язык</string>
    <string name="ok_delete">Ок, удалить</string>
    <string name="do_you_want_to_delete_all_tasks">Вы хотите удалить все задачи?</string>
    <string name="delete_completed_tasks">Удалить выполненные задачи</string>
    <string name="title_activity_main111">MainActivity111</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>