<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_while_color"
        android:padding="10dp">


        <TextView
            android:id="@+id/txt_title_delete_dialog"
            style="@style/main_txt_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="start"
            android:text="@string/do_you_want_to_delete_all_tasks"
            android:textColor="@color/main_txt_color"
            app:layout_constraintEnd_toStartOf="@+id/img_delete_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_delete_all"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/delete_all_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/main_color_green"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_delete_all" />

        <Button
            android:id="@+id/btn_ok_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/main_color_red"
            android:text="@string/ok_delete"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>