<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.alltasks.AllFragment">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_toolbar_menu"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/txt_title_toolbar"
        style="@style/main_txt_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@+id/img_toolbar_add"
        android:layout_toEndOf="@+id/img_toolbar_menu"
        android:text="All Tasks"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/img_toolbar_add"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_toolbar_menu"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/back_icon_plus"
        app:layout_constraintBottom_toBottomOf="@+id/img_toolbar_add"
        app:layout_constraintEnd_toEndOf="@+id/img_toolbar_add"
        app:layout_constraintStart_toStartOf="@+id/img_toolbar_add"
        app:layout_constraintTop_toTopOf="@+id/img_toolbar_add" />

    <ImageView
        android:id="@+id/img_toolbar_add"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="1dp"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_result"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/card_color"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_toolbar_add">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                app:cpb_background_progressbar_color="@color/main_while_color"
                app:cpb_background_progressbar_width="10dp"
                app:cpb_progress="75"
                app:cpb_progress_direction="to_right"
                app:cpb_progress_max="100"
                app:cpb_progressbar_color="@color/main_color_green"
                app:cpb_progressbar_width="12dp"
                app:cpb_round_border="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="72%"
                android:textColor="@color/main_txt_color"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
                app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
                app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

            <ImageView
                android:id="@+id/img_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                app:layout_constraintStart_toEndOf="@+id/circularProgressBar"
                app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

            <ImageView
                android:id="@+id/img_in_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_progress_t"
                app:layout_constraintEnd_toEndOf="@+id/img_completed"
                app:layout_constraintStart_toStartOf="@+id/img_completed"
                app:layout_constraintTop_toBottomOf="@+id/img_completed" />

            <ImageView
                android:id="@+id/img_all_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_all_o"
                app:layout_constraintBottom_toTopOf="@+id/img_completed"
                app:layout_constraintEnd_toEndOf="@+id/img_completed"
                app:layout_constraintStart_toStartOf="@+id/img_completed" />

            <TextView
                android:id="@+id/txt_all_t"
                style="@style/txt_middle_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_tasks"
                app:layout_constraintBottom_toBottomOf="@+id/img_all_t"
                app:layout_constraintStart_toEndOf="@+id/img_all_t"
                app:layout_constraintTop_toTopOf="@+id/img_all_t" />

            <TextView
                android:id="@+id/txt_number_completed"
                style="@style/txt_style_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="17"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_number_all"
                style="@style/txt_style_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                app:layout_constraintBottom_toBottomOf="@+id/txt_all_t"
                app:layout_constraintStart_toStartOf="@+id/txt_number_completed"
                app:layout_constraintTop_toTopOf="@+id/txt_all_t" />

            <TextView
                android:id="@+id/txt_number_progress"
                style="@style/txt_style_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                app:layout_constraintBottom_toBottomOf="@+id/txt_progress_t"
                app:layout_constraintEnd_toEndOf="@+id/txt_number_completed"
                app:layout_constraintStart_toStartOf="@+id/txt_number_completed"
                app:layout_constraintTop_toTopOf="@+id/txt_progress_t" />

            <TextView
                android:id="@+id/txt_completed_t"
                style="@style/txt_middle_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_tasks"
                app:layout_constraintBottom_toBottomOf="@+id/img_completed"
                app:layout_constraintStart_toEndOf="@+id/img_completed"
                app:layout_constraintTop_toTopOf="@+id/img_completed" />

            <TextView
                android:id="@+id/txt_progress_t"
                style="@style/txt_middle_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress_tasks"
                app:layout_constraintBottom_toBottomOf="@+id/img_in_progress"
                app:layout_constraintStart_toEndOf="@+id/img_in_progress"
                app:layout_constraintTop_toTopOf="@+id/img_in_progress" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/card_color"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_result">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/task_item"
            />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>